2021/09/16
* Added default "--resume" option in run_viralrecon.sh
* New script "publis.sh" added.  Still no functional.


2021/09/15
* Nexstrain results dir now goes inside results dir.
* Better naming in create_samplesheet, requires an additional "ID" argument

2021/09/13
* Creates sample sheet from a tab separated file with two columns: uniqueID, Barcode.


2021/09/01
* Added support for command line arguments (-j -v -d) to create_ins_report.sh
* Added general input control check for create_ins_report script.
* If -v (variants of interest file) is ommited the a default ins_voci.lst file is used.


